# gitopolis

./: .editorconfig  .gitignore  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: _ci.yml  _release.yml
benches/: README.md  benchmarks.rs
crates/gop-core/: Cargo.toml
crates/gop-core/src/: exec.rs  git.rs  gitopolis.rs  gop_types.rs  lib.rs  remotes.rs  repos.rs
crates/gop-core/tests/: gitopolis_tests.rs
crates/vaq-git/: Cargo.toml
crates/vaq-git/src/: exec.rs  git.rs  lib.rs  remotes.rs  repos.rs  tag_filter.rs  vaq_git.rs  vaq_types.rs
crates/vaq-git/tests/: vaquera_tests.rs
scripts/: build.rs  import  template.nu
src/: exec.rs  git.rs  git_types.rs  gitopolis.rs  gop_types.rs  lib.rs  main.rs  repos.rs
tasks/: import
tests/spec/: git.rs
