[package]
authors = ["Tim Abell <t@0x5.uk>"]
build = "scripts/build.rs"
categories = ["command-line-utilities", "development-tools"]
default-run = "gitopolis"
description = "Manage multiple git repositories - CLI tool - run commands, clone, and organize repos with tags"
documentation = "https://www.nushell.sh/book/"
edition = "2024"
exclude = ["images"]
homepage = "https://github.com/timabell/gitopolis"
keywords = ["git", "cli", "multi-repo", "microservices"]
license = "AGPL-3.0-only"
name = "gitopolis"
readme = "README.md"
repository = "https://github.com/timabell/gitopolis"
rust-version = "1.89.0"
version = "0.0.0-git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.cargo-machete]
ignored = [
	"serde",     # Used via serde_derive macro
	"openssl",   # Required by git2 for SSL support
]

[package.metadata.winresource]
FileDescription = "Manage multiple Git repositories"
FileVersion = "${version}"
ProductVersion = "${version}"
ProductName = "Gitopolis"

# Run all benchmarks with `cargo bench`
# Run individual benchmarks like `cargo bench -- <regex>` e.g. `cargo bench -- parse`
[[bench]]
name = "benchmarks"
harness = false

[dependencies]
gop-core = { path = "./crates/gop-core" }

clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
wild = "2.2.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tango-bench = "0.6.0"
tempfile = "3.23.0"

[lints]
workspace = true

[workspace]
members = [
	"crates/gop-core",
]

[workspace.lints.clippy]
# Warning: workspace lints affect library code as well as tests, so don't enable lints that would be too noisy in tests like that.
unchecked_duration_subtraction = "warn"
used_underscore_binding = "warn"
result_large_err = "allow"
