[package]
authors = ["Roger Senna <rs3nn42@gmail.com>"]
build = "scripts/build.rs"
categories = ["command-line-utilities", "development-tools"]
default-run = "vaquera"
description = "tbd"
documentation = "tbd"
edition = "2024"
exclude = ["assets/**", "docs/**", "scripts/**", "tests/**"]
homepage = "https://github.com/rsenna/vaquera"
keywords = ["git", "cli", "multi-repo", "productivity", "workspace"]
license = "AGPL-3.0-only"
name = "vaquera"
readme = "README.md"
repository = "https://github.com/rsenna/vaquera"
rust-version = "1.89.0"
version = "0.0.0-git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.cargo-machete]
ignored = [
	"serde",     # Used via serde_derive macro
	"openssl",   # Required by git2 for SSL support
]

[package.metadata.winresource]
FileDescription = "Generic workspace CLI manager"
FileVersion = "${version}"
ProductVersion = "${version}"
ProductName = "Vaquera"

# Run all benchmarks with `cargo bench`
# Run individual benchmarks like `cargo bench -- <regex>` e.g. `cargo bench -- parse`
[[bench]]
name = "benchmarks"
harness = false

[dependencies]
vaq-git = { path = "./crates/vaq-git" }

clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
wild = "2.2.1"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tango-bench = "0.6.0"
tempfile = "3.23.0"

[workspace]
members = [
	"crates/vaq-git",
]
