[package]
authors = ["Roger Senna <rs3nn42@gmail.com"]
description = "Git library for Vaquera"
edition = "2024"
license = "AGPL-3.0-only"
name = "vaq-git"
readme = "README.md"

[dependencies]
bstr = { version = "1.12.1", features = ["serde"] }
derive_builder = "0.20.2"
derive_more = { version = "2.0.1", features = ["full"] }
git2 = "0.20.2"
gix-url = { version = "0.33.1", features = ["serde"] }
log = "0.4.28"
serde = "1.0.228"
serde_derive = "1.0.228"
thiserror = { version = "2.0.17", features = ["default"] }
toml = "0.9.8"

[lib]
bench = false
